# Petit-Julia-2020

./: .gitignore  README.md  a.out  out  test.sh
archives/: compil.ml  hyperOld.ml  samenhir_utilitiesOld.ml  tests.txt
archives/Samenhir/: ast.ml  lexer2.mll  samenhirParserSecurity.mly  testeur.ml
misc/: logo.psd
src/: .merlin  Logo.txt  Makefile  ast.ml  ast2.ml  astcompilN.ml  astinterp.ml  astype.ml  astype2.ml  astypeV1.ml  compilNaif.ml  compilNaif.mli  compilNaifFlottant.ml  compilRef.ml  compilRef.mli  depManager.ml  depManager.mli  dum.ml  dune  dune-lent  dune-lourd  expo  gmon.out  hyper.ml  hyper2.ml  hyper2.mli  hyper3.ml  interp.ml  interp.mli  lexer.mll  logo.ml  minijulia.ml  ollvm_test.ml  pPkg.ml  pPkg.mli  parser.automaton  parser.conflicts  parser.mli  parser.mly  parser.sam  (+32 more)
src/Samenhir/: ConstructionTable.ml  SamenhirV2.ml  fichier.txt  lexer.mll  lexer2.mll  parser.mly  parser2.sam  parser2.txt  samenhir.ml  samenhirAst.ml  samenhirLexer.mll  samenhir_utilities.ml
test/exec/: fib.jl  mandelbrot.jl
vivien-gierczak--galle/: README.md  astcompilN.ml  astinterp.ml  compilNaif.ml  compilNaif.mli  dune  dune-lent  hyper.ml  hyper.mli  interp.ml  pPkg.ml  pPkg.mli  parser.sam  parserExemple.sam  pjuliac.ml  pjuliarepl.ml  samenhir.ml  samenhirAst.ml  samenhirLexer.mll  samenhirParserBuilder.ml  samenhir_utilities.ml  samenhir_utilities.mli  test.jl  x86_64.ml
