(rule
  (target samenhirParserBuilder.byte)
  (action
	(run ocamlbuild -no-hygiene samenhirParserBuilder.byte)))
(rule
  (target samenhirParser.ml)
  (deps samenhirParserBuilder.byte)
  (action
	(run ./samenhirParserBuilder.byte)))
(rule
  (target samenhir.byte)
  (deps samenhirParser.ml)
  (action
	(run ocamlbuild -no-hygiene samenhir.byte)))
(rule
  (target parser.ml)
  (deps samenhir.byte (file parser.txt))
  (action 
	(run ./samenhir.byte parser.txt)
))
(ocamllex
  (modules lexer samenhirLexer))
(executables
  (names pjuliac pjuliarepl)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord))
  (libraries unix)
  (flags ()))
