(rule
  (target samenhirParserBuilder)
  (deps
	(file samenhirAst.ml)
	(file samenhirParserBuilder.ml)
	(file samenhir_utilities.mli)
	(file samenhir_utilities.ml))
  (action
	(run ocamlopt samenhirAst.ml samenhir_utilities.mli samenhir_utilities.ml samenhirParserBuilder.ml -o samenhirParserBuilder)))
(rule
  (target samenhirParser.ml)
  (deps samenhirParserBuilder)
  (action
	(run ./samenhirParserBuilder)))
(rule
  (target samenhir)
  (deps samenhirParser.ml
	samenhirLexer.ml
	(file samenhirAst.ml))
  (action
	(run ocamlopt samenhirAst.ml samenhir_utilities.mli samenhir_utilities.ml samenhirParser.mli samenhirParser.ml samenhirLexer.ml samenhir.ml -o samenhir -O3)))
(rule
  (target parser.ml)
  (deps samenhir (file parser.sam))
  (action
	(run ./samenhir parser.sam)
))
(ocamllex
  (modules lexer samenhirLexer))
(executables
  (names pjuliac pjuliarepl)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord))
  (libraries unix lwt core_kernel yojson cohttp cohttp-lwt-unix lwt_ssl)
  (flags ())
)
